[package]
name = "network"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = {version = "0.34.0"}
anyhow = "1.0.79"
pnet_transport = "0.34.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
rustls = "0.20"
tokio-rustls = "0.23"
webpki-roots = "0.22"
log = "0.4"
env_logger = "0.9"
rustls-pemfile = "2.1.2"

[[example]]
name = "get-network"
path = "examples/get-network.rs"

[[example]]
name = "capture"
path = "examples/capture.rs"


[[example]]
name = "ping"
path = "examples/ping.rs"


[[example]]
name = "test"
path = "examples/test.rs"


[[example]]
name = "tcp-domain"
path = "examples/tcp-domain.rs"


